# zoltraak-spell-recognizer

./: .gitignore  README.md  dummy.py  install_weights.py  main.py  pyproject.toml  spell_classifier.py
anchors/: README.md
audio_encoder/: base.py  hubert.py
source_separation/: base.py  sepformer.py
utils/: audio.py
