[project]
name = "zoltraak-spell-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "scikit-learn>=1.6.1",
    "sounddevice==0.4.6",
    "soundfile>=0.12.1",
    "speechbrain>=1.0.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
